--- a/src/app/admin/edit/[username]/EditPage.module.css
+++ b/src/app/admin/edit/[username]/EditPage.module.css
@@ -63,10 +63,24 @@
   border-color: #007BFF;
   outline: none;
 }
-
+.success {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  text-align: center;
+}
 .error {
-  color: #ff4d4d;
-  font-size: 14px;
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  font-size: 16px;
   text-align: center;
 }
 
