--- a/src/app/admin/user/UserPage.module.css
+++ b/src/app/admin/user/UserPage.module.css
@@ -13,11 +13,11 @@
 }
 
 .title {
-  font-size: 2.2rem;
-  margin-bottom: 20px;
-  text-align: center;
-  color: #4a5568;
-  font-weight: 600;
+    font-size: 2rem;
+    font-weight: bold;
+    color: #7c9590;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .actions {
