--- a/src/app/registermodal/Registermodal.module.css
+++ b/src/app/registermodal/Registermodal.module.css
@@ -81,7 +81,7 @@
 }
 
 .button {
-  background: #007bff;
+  background: #6d98c6;
   color: #fff;
   padding: 10px 15px;
   font-size: 16px;
@@ -93,7 +93,7 @@
 }
 
 .button:hover {
-  background: #0056b3;
+  background: #93bce8;
 }
 
 .error {
