--- a/src/app/dashboard/appointments/AppointmentsPage.module.css
+++ b/src/app/dashboard/appointments/AppointmentsPage.module.css
@@ -25,10 +25,11 @@
 /* Title */
 .title {
   font-size: 2rem;
-  font-weight: bold;
-  color: #7c9590;
-  text-align: center;
-  margin-bottom: 20px;
+    font-weight: bold;
+    color: #7c9590;
+    text-align: center;
+    margin-bottom: 10px;
+    padding: 20px;
 }
 
 /* Appointment List */
